<resources>
    <string name="app_name">Note Keeper</string>
    <string name="title_activity_note">Edit Note</string>

    <string name="hint_note_title">Note title</string>
    <string name="hint_note_text">Note text</string>

    <string name="fab_description">Create new note</string>

    <string name="menu_send_email">Send Email</string>
    <string name="menu_add_image">Add image</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_next">Next</string>
    <string name="menu_set_reminder">Set Reminder</string>

    <string name="text_course">TextView</string>
    <string name="text_title">TextView</string>

    <string name="title_activity_main">NoteKeeper</string>

    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup notes</string>
    <string name="action_upload">Upload notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_notes">Notes</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_user_name">Your name</string>
    <string name="pref_default_user_name">Tiana Aiyemo</string>

    <string name="pref_user_email">Your email</string>
    <string name="pref_default__user_email">chrissetiana@gmail.com</string>

    <string name="pref_favorite_social">Favorite social network</string>
    <string name="pref_default_favorite_social">https://twitter.com</string>
    <string-array name="pref_entries_favorite_social">
        <item>Twitter</item>
        <item>Facebook</item>
        <item>Instagram</item>
    </string-array>
    <string-array name="pref_values_favorite_social">
        <item>https://twitter.com</item>
        <item>https://facebook.com</item>
        <item>https://instagram.com</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="img_description_course">Course</string>
    <string name="img_description_note">Note</string>

    <string name="note_reminder_notification_title_template">Note reminder: %1$s</string>

    <string name="note_reminder_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
</resources>
